--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testowanie</title>
+    <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
-    Pierwszy commit
+<h1>Bob Dylan</h1>
+<h2>Title: "Lay, lady, lay"</h2>
+<p>
+    Lay, lady, lay
+    Lay across my big brass bed<br>
+    Lay, lady, lay
+    Lay across my big brass bed<br>
+    Whatever colors you have
+    In your mind<br>
+    I'll show them to you
+    And you'll see them shine<br>
+    Lay, lady, lay
+    Lay across my big brass bed
+    Stay, lady, stay
+    Stay with your man awhile<br>
+    Until the break of day
+    Let me see you make him smile<br>
+    His clothes are dirty, but his-
+    His hands are clean
+    And you're the best thing that he's
+    Ever seen<br>
+    Stay, lady, stay
+    Stay with your man awhile<br>
+</p>
+<h2>Album: "Nashville Skyline" april 1969</h2>
+
 </body>
 </html>
