Add basic styling in style.css. index.html no change

--- a/index.html
+++ b/index.html
@@ -10,28 +10,44 @@
 <body>
 <h1>Bob Dylan</h1>
 <h2>Title: "Lay, lady, lay"</h2>
+
 <p>
     Lay, lady, lay
-    Lay across my big brass bed<br>
+    Lay across my big brass bed
+</p>
+<p>
     Lay, lady, lay
-    Lay across my big brass bed<br>
+    Lay across my big brass bed
+</p>
+<p>
     Whatever colors you have
-    In your mind<br>
+    In your mind
+</p>
+<p>
     I'll show them to you
-    And you'll see them shine<br>
+    And you'll see them shine
+</p>
+<p>
     Lay, lady, lay
     Lay across my big brass bed
     Stay, lady, stay
-    Stay with your man awhile<br>
+    Stay with your man awhile
+</p>
+<p>
     Until the break of day
-    Let me see you make him smile<br>
+    Let me see you make him smile
+</p>
+<p>
     His clothes are dirty, but his-
     His hands are clean
     And you're the best thing that he's
-    Ever seen<br>
-    Stay, lady, stay
-    Stay with your man awhile<br>
+    Ever seen
 </p>
+<p>
+    Stay, lady, stay
+    Stay with your man awhile
+</p>
+
 <h2>Album: "Nashville Skyline" april 1969</h2>
 
 </body>
