--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css"> 
 </head>
 <body>
-<h1>Bob Dylan</h1>
+<h1>Bob Dylan - najlepszy muzyk</h1>
 <h2>Title: "Lay, lady, lay"</h2>
 
 <p>
